<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:key="ftpPrefCatAuth"
		android:title="@string/prefsCategoryTitleAuth">
		<SwitchPreference
			android:name="anonymousLogin"
			android:defaultValue="false"
			android:key="anonymousLoginPref"
			android:summary="@string/prefSummaryAnonymousLogin"
			android:title="@string/prefTitleAnonymousLogin" />
		<EditTextPreference
			android:name="user_name"
			android:defaultValue="admin"
			android:key="userNamePref"
			android:summary="@string/prefSummaryUser"
			android:title="@string/prefTitleUser" />
		<org.primftpd.prefs.EncryptingEditTextPreference
			android:name="password"
			android:defaultValue="topqizhi"
			android:inputType="textPassword"
			android:key="passwordPref"
			android:summary="@string/prefSummaryPassword"
			android:title="@string/prefTitlePassword" />
		<SwitchPreference
			android:name="pubKeyAuth"
			android:defaultValue="false"
			android:key="pubKeyAuthPref"
			android:summary="@string/prefSummaryPubKeyAuth"
			android:title="@string/prefTitlePubKeyAuth" />
	</PreferenceCategory>

	<PreferenceCategory
		android:key="ftpPrefCatConnectivity"
		android:title="@string/prefsCategoryTitleConnectivity">
		<ListPreference
			android:name="whichServerToStart"
			android:defaultValue="1"
			android:entries="@array/prefWhichServerToStartNames"
			android:entryValues="@array/prefWhichServerToStartValues"
			android:key="whichServerToStartPref"
			android:summary="@string/prefSummaryWhichServerToStart"
			android:title="@string/prefTitleWhichServerToStart" />
		<org.primftpd.prefs.PortEditTextPreference
			android:name="port"
			android:defaultValue="2121"
			android:inputType="number"
			android:key="portPref"
			android:summary="@string/prefSummaryPort"
			android:title="@string/prefTitlePort" />
		<org.primftpd.prefs.PortEditTextPreference
			android:name="sslPort"
			android:defaultValue="2122"
			android:inputType="number"
			android:key="securePortPref"
			android:summary="@string/prefSummaryPortSecure"
			android:title="@string/prefTitlePortSecure" />
		<org.primftpd.prefs.FtpPassivePortsEditTextPreference
			android:name="ftpPassivePorts"
			android:defaultValue="23210-23219"
			android:key="ftpPassivePortsPref"
			android:summary="@string/prefSummaryFtpPassivePorts"
			android:title="@string/prefTitleFtpPassivePorts" />
		<EditTextPreference
			android:name="idleTimeout"
			android:defaultValue="0"
			android:inputType="number"
			android:key="idleTimeoutPref"
			android:summary="@string/prefSummaryIdleTimeoutV2"
			android:title="@string/prefTitleIdleTimeout" />
		<EditTextPreference
			android:name="allowedIpsPattern"
			android:key="allowedIpsPatternPref"
			android:summary="@string/prefSummaryAllowedIpsPattern"
			android:title="@string/prefAllowedIpsPattern" />
	</PreferenceCategory>

	<PreferenceCategory
		android:key="ftpPrefCatUi"
		android:title="@string/prefsCategoryTitleUi">
		<SwitchPreference
			android:name="startOnOpen"
			android:defaultValue="false"
			android:key="startOnOpenPref"
			android:summary="@string/prefSummaryStartOnOpen"
			android:title="@string/prefTitleStartOnOpen" />
		<SwitchPreference
			android:name="showConnectionInfoInNotification"
			android:defaultValue="true"
			android:key="showConnectionInfoInNotificationPref"
			android:summary="@string/prefSummaryShowConnectionInfoInNotification"
			android:title="@string/prefTitleShowConnectionInfoInNotification" />
		<SwitchPreference
			android:name="showIpv4InNotification"
			android:defaultValue="true"
			android:key="showIpv4InNotificationPref"
			android:summary="@string/prefSummaryShowIpv4InNotification"
			android:title="@string/prefTitleSshowIpv4InNotification" />
		<SwitchPreference
			android:name="showIpv6InNotification"
			android:defaultValue="true"
			android:key="showIpv6InNotificationPref"
			android:summary="@string/prefSummaryShowIpv6InNotification"
			android:title="@string/prefTitleSshowIpv6InNotification" />
		<SwitchPreference
			android:name="showStartStopNotification"
			android:defaultValue="false"
			android:key="showStartStopNotificationPref"
			android:summary="@string/prefSummaryShowStartStopNotification"
			android:title="@string/prefTitleShowStartStopNotification" />
		<SwitchPreference
			android:name="quickSettingsRequiresUnlock"
			android:defaultValue="true"
			android:key="quickSettingsRequiresUnlockPref"
			android:summary="@string/prefSummaryQuickSettingsRequiresUnlock"
			android:title="@string/prefTitleQuickSettingsRequiresUnlock" />
		<ListPreference
			android:name="theme"
			android:defaultValue="0"
			android:entries="@array/prefThemeNames"
			android:entryValues="@array/prefThemeValues"
			android:key="themePref"
			android:summary="@string/prefSummaryTheme"
			android:title="@string/prefTheme" />
	</PreferenceCategory>

	<PreferenceCategory
		android:key="ftpPrefCatSystem"
		android:title="@string/prefsCategoryTitleSystem">
		<org.primftpd.prefs.StartDirEditTextPreference
			android:name="startDir"
			android:defaultValue="/sdcard/nas/public/"
			android:key="startDirPref"
			android:summary="@string/prefSummaryStartDir"
			android:title="@string/prefTitleStartDir" />
		<SwitchPreference
			android:name="wakelock"
			android:defaultValue="true"
			android:key="wakelockPref"
			android:summary="@string/prefSummaryWakelock"
			android:title="@string/prefTitleWakelock" />
		<SwitchPreference
			android:name="announce"
			android:defaultValue="false"
			android:key="announcePref"
			android:summary="@string/prefSummaryAnnounce"
			android:title="@string/prefTitleAnnounce" />
		<EditTextPreference
			android:name="announce_name"
			android:defaultValue="primitive ftpd"
			android:key="announceNamePref"
			android:summary="@string/prefSummaryAnnounceName"
			android:title="@string/prefTitleAnnounceName" />
		<SwitchPreference
			android:name="startOnBoot"
			android:defaultValue="false"
			android:key="startOnBootPref"
			android:summary="@string/prefSummaryStartOnBoot"
			android:title="@string/prefTitleStartOnBoot" />
		<ListPreference
			android:name="logging"
			android:defaultValue="0"
			android:entries="@array/prefLoggingNames"
			android:entryValues="@array/prefLoggingValues"
			android:key="loggingPref"
			android:summary="@string/prefSummaryLoggingV2"
			android:title="@string/prefTitleLogging" />
	</PreferenceCategory>

</PreferenceScreen>
